# federation-rs

./: .gitignore  .gitleaks.toml  .gitmodules  .tool-versions  CHANGELOG.md  CODEOWNERS  Cargo.publish.toml  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  build_for_local_dev.sh  build_harmonizer.rs  federation-rs.code-workspace  install.sh  package-lock.json  renovate.json5  rust-toolchain.toml
.circleci/: config.yml
apollo-composition/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md
apollo-composition/src/: lib.rs
apollo-federation-types/: CHANGELOG.md  Cargo.toml  RELEASE_CHECKLIST.md
apollo-federation-types/src/: build_error.rs  lib.rs
apollo-federation-types/src/build_plugin/: build_message.rs  mod.rs  plugin_result.rs
apollo-federation-types/src/composition/: mod.rs
apollo-federation-types/src/config/: config_error.rs  mod.rs  project.rs  subgraph.rs  supergraph.rs  version.rs
apollo-federation-types/src/javascript/: mod.rs
apollo-federation-types/src/rover/: error.rs  mod.rs  output.rs
federation-1/harmonizer/: .gitignore  Cargo.toml  README.md  RELEASE_CHECKLIST.md  build.rs  package-lock.json  package.json
federation-1/harmonizer/deno/: runtime.js
federation-1/harmonizer/esbuild/: bundler.js
federation-1/harmonizer/js-src/: composition.ts  do_compose.ts  runtime.js  test_logger_worker.ts  types.ts
federation-1/harmonizer/src/: js_types.rs  lib.rs
federation-1/harmonizer/src/snapshots/: harmonizer_0__tests__it_works.snap  harmonizer__tests__it_works.snap
federation-1/supergraph/: Cargo.toml
federation-1/supergraph/src/command/: compose.rs
federation-2/harmonizer/: Cargo.toml  RELEASE_CHECKLIST.md  build.rs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
federation-2/harmonizer/bundled/: bridge.js  bridge.js.map  do_compose.js
federation-2/harmonizer/deno/: do_compose.js  runtime.js
federation-2/harmonizer/esbuild/: buffer_shim.js  bundler.js  shims.js  util_text_codecs.js
federation-2/harmonizer/js-dist/: composition.d.ts  composition.d.ts.map  composition.js  composition.js.map  do_compose.d.ts  do_compose.d.ts.map  do_compose.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  runtime.d.ts  runtime.d.ts.map  runtime.js  runtime.js.map  types.d.ts  types.d.ts.map
federation-2/harmonizer/js-src/: composition.ts  do_compose.ts  runtime.js  types.ts
federation-2/harmonizer/src/: js_types.rs  lib.rs
federation-2/harmonizer/src/snapshots/: harmonizer__tests__it_works.snap
federation-2/router-bridge/: Cargo.toml  RELEASE_CHECKLIST.md  build.rs  package-lock.json  package.json  tsconfig.json
federation-2/router-bridge/benches/: query_planning.rs  schema.graphql
federation-2/router-bridge/esbuild/: bundler.js
federation-2/router-bridge/js-src/: api_schema.ts  do_api_schema.ts  do_introspect.ts  do_validate.ts  index.ts  introspection.ts  plan.ts  plan_worker.ts  runtime.js  supported_features.ts  test_logger_worker.ts  test_url.ts  types.ts  validate.ts
federation-2/router-bridge/snapshots/: query_runtime.snap
federation-2/router-bridge/src/: api_schema.rs  error.rs  introspect.rs  js.rs  lib.rs  plan.rs  planner.rs  pool.rs  validate.rs  worker.rs
federation-2/router-bridge/src/snapshots/: router_bridge__introspect__tests__defer_in_introspection-2.snap  router_bridge__introspect__tests__defer_in_introspection.snap  router_bridge__planner__error_display__defer_query_plan.snap  router_bridge__planner__error_display__defer_with_fragment.snap  router_bridge__planner__error_display__set_context.snap  router_bridge__planner__error_display__typed_condition_field_merging_disabled.snap  router_bridge__planner__error_display__typed_condition_field_merging_enabled.snap  router_bridge__planner__tests__anonymous_query_works-2.snap  router_bridge__planner__tests__anonymous_query_works.snap  router_bridge__planner__tests__api_schema.snap  router_bridge__planner__tests__defer_under_interface.snap  router_bridge__planner__tests__generate_query_fragments_defaults_to_false.snap  router_bridge__planner__tests__generate_query_fragments_explicit_false.snap  router_bridge__planner__tests__generate_query_fragments_true.snap  router_bridge__planner__tests__get_operation_signature.snap  router_bridge__planner__tests__it_works-2.snap  router_bridge__planner__tests__it_works.snap  router_bridge__planner__tests__named_query_with_operation_name_works-2.snap.new  (+21 more)
federation-2/supergraph/: Cargo.toml
harmonizer/: .gitignore  Cargo.toml  RELEASE_CHECKLIST.md  build.rs  esbuild.js  package-lock.json  package.json  rollup.config.js  tsconfig.base.json  tsconfig.json
harmonizer-0/: Cargo.publish.toml  Cargo.toml  RELEASE_CHECKLIST.md  RELEASING.md  build.rs  esbuild.js  package-lock.json  package.json
harmonizer-0/deno/: runtime.js
harmonizer-0/esbuild/: bundler.js
harmonizer-0/js/: do_compose.js
harmonizer-0/src/: js_types.rs  lib.rs
harmonizer-0/src/snapshots/: harmonizer_0__tests__it_works.snap
harmonizer-2/: .gitignore  Cargo.publish.toml  Cargo.toml  README.md  RELEASE_CHECKLIST.md  RELEASING.md  build.rs  package-lock.json  package.json
harmonizer-2/deno/: do_compose.js
harmonizer-2/esbuild/: bundler.js
harmonizer-2/src/: js_types.rs  lib.rs
harmonizer-2/src/snapshots/: harmonizer_2__tests__it_works.snap
harmonizer/esbuild/: bundler.js  url_shim.js
harmonizer/js/: do_compose.js  dummy_buffer.js
harmonizer/js-src/: composition.ts  do_compose.ts  index.ts  types.ts
harmonizer/src/: lib.rs
harmonizer/src/snapshots/: harmonizer__tests__it_works.snap
supergraph/: Cargo.toml
supergraph-0/: Cargo.publish.toml  Cargo.toml
supergraph-2/: Cargo.publish.toml  Cargo.toml  README.md
supergraph-2/src/: cli.rs
supergraph/src/: cli.rs  main.rs
supergraph/src/command/: compose.rs
supergraph/tests/: compose_test.yaml
xtask/: Cargo.toml  README.md
xtask/src/: main.rs  packages.rs  target.rs  utils.rs
xtask/src/commands/: dist.rs  lint.rs  mod.rs  prep.rs  publish.rs  tag.rs  test.rs
xtask/src/tools/: cargo.rs  git.rs  mod.rs  npm.rs  runner.rs  xcrun.rs
(+98 files in other folders)
