[workspace]
members = ["apollo-federation-types", "apollo-composition"]
resolver = "2"

[workspace.dependencies]
apollo-compiler = "1.31.0"
# pinning to a revision with https://github.com/apollographql/router/pull/9060 fix
apollo-federation = { git = "https://github.com/apollographql/router", rev = "9143bef9e0ef39618fe1138d75a6109fc62847dd" }
