[workspace]
members = ["apollo-federation-types", "apollo-composition"]
resolver = "2"

[workspace.dependencies]
apollo-compiler = "1.31.0"
# pinning to a revision with https://github.com/apollographql/router/pull/9305 fix
apollo-federation = { git = "https://github.com/apollographql/router", rev = "c2ddb1cec3fafb0586bf93b9b425bd25a115aab8" }
