[package]
name = "apollo-composition"
version = "0.4.0-preview.10"
license = "Elastic-2.0"
edition = "2021"
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = "Internal package used to create Apollo products"
readme = "README.md"
repository = "https://github.com/apollographql/federation-rs/"

[dependencies]
apollo-compiler = { workspace = true }
apollo-federation = { workspace = true }
apollo-federation-types = { version = "0.16.0-preview.7", path = "../apollo-federation-types", features = [
  "composition",
] }
