[package]
name = "apollo-composition"
version = "0.6.0-native.1"
license = "Elastic-2.0"
edition = "2021"
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = "Internal package used to create Apollo products"
readme = "README.md"
repository = "https://github.com/apollographql/federation-rs/"

[dependencies]
apollo-compiler = { workspace = true }
apollo-federation = { workspace = true }
apollo-federation-types = { version = "0.18.0-native.1", path = "../apollo-federation-types", features = [
  "composition",
] }
