[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = """
apollo-federation-types contains types used by plugins for the Rover CLI
"""
edition = "2021"
license = "MIT"
name = "apollo-federation-types"
readme = "README.md"
repository = "https://github.com/apollographql/federation-rs/"
version = "0.13.2"

[features]
default = ["config", "build", "build_plugin"]

build = ["serde_json"]
build_plugin = ["serde_json"]
config = ["camino", "log", "thiserror", "serde_yaml", "url", "serde_with"]

[dependencies]
# config and build dependencies
serde = {version = "1", features = ["derive"]}

# config-only dependencies
camino = {version = "1", features = ["serde1"], optional = true}
log = {version = "0.4", optional = true}
semver = {version = "1", features = ["serde"]}
serde_with = {version = "3", default-features = false, features = ["macros"], optional = true}
serde_yaml = {version = "0.8", optional = true}
thiserror = {version = "1", optional = true}
url = {version = "2", features = ["serde"], optional = true}

# build-only dependencies
serde_json = {version = "1", optional = true}

[dev-dependencies]
assert_fs = "1"
rstest = "0.21.0"
serde_json = "1"
serde_yaml = "0.8"
