[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = """
apollo-federation-types contains types used by plugins for the Rover CLI
"""
edition = "2021"
license = "MIT"
name = "apollo-federation-types"
readme = "README.md"
repository = "https://github.com/apollographql/federation-rs/"
version = "0.15.7"

[features]
default = ["config", "build", "build_plugin"]

build = ["serde_json"]
build_plugin = ["serde_json"]
composition = ["apollo-compiler"]
config = ["log", "thiserror", "serde_yaml", "url", "serde_with"]
json_schema = ["schemars"]

[dependencies]
# only used for composition
apollo-compiler = { workspace = true, optional = true }
apollo-federation = { workspace = true }

# config and build dependencies
serde = { version = "1", features = ["derive"] }
schemars = { version = "1.0.0", optional = true, features = ["url"] }

# config-only dependencies
log = { version = "0.4", optional = true }
semver = { version = "1", features = ["serde"] }
serde_with = { version = "3", default-features = false, features = [
  "macros",
], optional = true }
serde_yaml = { version = "0.8", optional = true }
thiserror = { version = "1", optional = true }
url = { version = "2", features = ["serde"], optional = true }

# build-only dependencies
serde_json = { version = "1", optional = true }

[dev-dependencies]
assert_fs = "1"
rstest = "0.21.0"
serde_json = "1"
serde_yaml = "0.8"
