[package]
name = "harmonizer-0"
version = "0.33.8"
authors = [ "Apollo Graph, Inc. <packages@apollographql.com>" ]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license = "MIT"
readme = "README.md"
include = [ "dist/**/*", "js/**/*", "src/**/*", "Cargo.toml" ]

[lib]
name = "harmonizer_0"
path = "src/lib.rs"

[dependencies]
deno_core = "0.114.0"
serde_json = "1"

[dependencies.apollo-federation-types]
path = "../apollo-federation-types"
version = "0.1"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
which = "4.2.2"
