[package]
name = "harmonizer-0"
version = "0.33.8"
authors = [ "Apollo Graph, Inc. <packages@apollographql.com>" ]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license = "MIT"
readme = "README.md"
include = [ "dist/**/*", "deno/**/*", "src/**/*", "Cargo.toml" ]
publish = false
build = "../build_harmonizer.rs"

[dependencies]
apollo-federation-types = { version = "0.2", path = "../apollo-federation-types", default-features = false, features = ["build"] }
deno_core = "0.114.0"
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
semver = "1"
serde_json = "1"
toml_edit = "0.13"
relative-path = "1"
which = "4.2.2"
