[package]
name = "harmonizer-2"
version = "2.0.0-alpha.3"
authors = [ "Apollo <packages@apollographql.com>" ]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license-file = "./LICENSE"
readme = "README.md"
include = [ "dist/**/*", "js/**/*", "src/**/*", "Cargo.toml" ]

[lib]
name = "harmonizer_2"
path = "src/lib.rs"

[dependencies]
deno_core = "0.114.0"
serde_json = "1"

[dependencies.apollo-federation-types]
path = "../apollo-federation-types"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
which = "4.2.2"
