[package]
name = "harmonizer"
version = "2.8.4"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license = "Elastic-2.0"
readme = "README.md"
include = [
  "bundled/**/*",
  "src/**/*",
  "deno/**/*",
  "Cargo.toml",
  "build.rs",
  "LICENSE",
]

[dependencies]
apollo-federation-types = { version = "0.13.1", path = "../apollo-federation-types", default-features = false, features = [
  "build",
] }
deno_core = "0.200.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.33"

[dev-dependencies]
insta = "1.34.0"

[build-dependencies]
deno_core = "0.200.0"
semver = "1"
serde_json = "1"
toml_edit = "0.22"
which = "4.4.2"
