[package]
name = "supergraph-0"
version = "0.33.8"
edition = "2021"
publish = false

[dependencies]

# workspace dependencies
apollo-federation-types = { path = "../apollo-federation-types" }
harmonizer = { path = "../harmonizer-0", package = "harmonizer-0" }

# crates.io dependencies
camino = "1"
serde_json = "1"
structopt = "0.3"
