[package]
name = "xtask"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
ansi_term = "0.12"
anyhow = "1"
camino = "1"
cargo_metadata = "0.14"
fs_extra = "1"
flate2 = "1"
lazy_static = "1.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = { version = "0.3", default-features = false }
tar = "0.4"
toml = "0.5"
which = "4.2"