[package]
name = "xtask"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
ansi_term = "0.12"
anyhow = "1"
base64 = "0.22"
flate2 = "1"
lazy_static = "1.4"
log = "0.4.21"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_traversal = "0.2"
simple_logger = "5.0.0"
structopt = { version = "0.3", default-features = false }
tar = "0.4"
tempfile = "3.9"
toml = "0.8"
which = "4.4"
zip = { version = "0.6", default-features = false }
