[package]
name = "harmonizer"
version = "2.0.2"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license-file = "./LICENSE"
readme = "README.md"
include = [
  "dist/**/*",
  "src/**/*",
  "deno/**/*",
  "Cargo.toml",
  "build.rs",
]

[dependencies]
apollo-federation-types = { version = "0.5", path = "../../apollo-federation-types", default-features = false, features = [
  "build",
] }
deno_core = "0.118.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1.8.0"

[build-dependencies]
deno_core = "0.118.0"
semver = "1"
serde_json = "1"
toml_edit = "0.13"
which = "4.2.2"
