[package]
name = "harmonizer"
version = "2.4.0"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "Apollo Federation utility to compose a supergraph from subgraphs"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"
license = "Elastic-2.0"
readme = "README.md"
include = [
  "bundled/**/*",
  "src/**/*",
  "deno/**/*",
  "Cargo.toml",
  "build.rs",
  "LICENSE",
]

[dependencies]
apollo-federation-types = { version = "0.7", path = "../../apollo-federation-types", default-features = false, features = [
  "build",
] }
deno_core = "0.171.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
insta = "1.28.0"

[build-dependencies]
deno_core = "0.171.0"
semver = "1"
serde_json = "1"
toml_edit = "0.19"
which = "4.4.0"
