[package]
name = "router-bridge"
version = "0.1.15+v2.3.1"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "JavaScript bridge for the Apollo Router"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"

license = "Elastic-2.0"
readme = "README.md"

include = [
    "bundled/**/*",
    "src/**/*",
    "benches/",
    "Cargo.toml",
    "build.rs",
    "LICENSE",
]

[dependencies]
anyhow = "1.0.44"
async-channel = "1.6.1"
deno_core = "0.167.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68", features = ["preserve_order"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-service = "0.3.1"
tracing = "0.1.33"

[dev-dependencies]
futures = "0.3.21"
insta = { version = "1.26.0", features = ["json"] }
pretty_assertions = "1.2.1"
tracing-test = "0.2.1"
criterion = { version = "0.4", features = ["async_tokio", "async_futures"] }

[build-dependencies]
deno_core = "0.167.0"
which = "4.2.2"

[features]
# "fake" feature to disable V8 usage when building on docs.rs
# See ./build.rs
docs_rs = []

[package.metadata.docs.rs]
features = ["docs_rs"]

[[bench]]
name = "query_planning"
harness = false
