[package]
name = "router-bridge"
version = "0.2.0+v2.4.0"
authors = ["Apollo <packages@apollographql.com>"]
edition = "2018"
description = "JavaScript bridge for the Apollo Router"
homepage = "https://www.apollographql.com/apollo-federation/"
documentation = "https://apollographql.com/docs/federation/"
repository = "https://github.com/apollographql/federation/"

license = "Elastic-2.0"
readme = "README.md"

include = [
    "bundled/**/*",
    "src/**/*",
    "benches/",
    "Cargo.toml",
    "build.rs",
    "LICENSE",
]

[dependencies]
anyhow = "1.0.70"
async-channel = "1.8.0"
deno_console = "0.89.0"
deno_core = "0.171.0"
deno_crypto = "0.103.0"
deno_url = "0.89.0"
deno_web = "0.120.0"
deno_webidl = "0.89.0"
rand = "0.8.5"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
thiserror = "1.0.40"
tokio = { version = "1.24.2", features = ["full"] }
tower = { version = "0.4.12", features = ["full"] }
tower-service = "0.3.1"
tracing = "0.1.33"

[dev-dependencies]
futures = "0.3.27"
insta = { version = "1.28.0", features = ["json"] }
pretty_assertions = "1.3.0"
tracing-test = "0.2.1"
criterion = { version = "0.4", features = ["async_tokio", "async_futures"] }

[build-dependencies]
deno_console = "0.89.0"
deno_core = "0.171.0"
deno_crypto = "0.103.0"
deno_url = "0.89.0"
deno_web = "0.120.0"
deno_webidl = "0.89.0"
which = "4.4.0"

[features]
# "fake" feature to disable V8 usage when building on docs.rs
# See ./build.rs
docs_rs = []

[package.metadata.docs.rs]
features = ["docs_rs"]

[[bench]]
name = "query_planning"
harness = false
