[package]
name = "supergraph"
version = "2.5.6"
edition = "2021"
publish = false

[dependencies]

# workspace dependencies
apollo-federation-types = { path = "../../apollo-federation-types" }
harmonizer = { path = "../harmonizer" }

# crates.io dependencies
camino = "1"
serde_json = "1"
structopt = "0.3"
